feat: add `get_content_assets_v1` lambda
